--- a/BOUTIQUE/views/produit.html.twig
+++ b/BOUTIQUE/views/produit.html.twig
@@ -1,34 +1,35 @@
 
-<h1> <?= $pdt->getTitre() ?> </h1>
-<img src="/photo/<?= $pdt->getPhoto() ?>" width="250"/>
+<h1> {{ produit.titre }} </h1>
+<img src="/photo/{{ produit.photo }}" width="250"/>
 <!-- <img src="photo/jaune.png" width="250" /> -->
 <p>Détails du produit : </p>
 <ul>
-	<li>Référence : <b><?= $pdt->getReference() ?></b></li>
-	<li>Catégorie : <b><?= $pdt->getCategorie() ?></b></li>
-	<li>Couleur : <b><?= $pdt->getCouleur() ?></b></li>
-	<li>Taille : <b><?= $pdt->getTaille() ?></b></li>
-	<li>Public : <b><?= $pdt->getPublic() ?></b></li>
-	<li>Prix : <b style="color: red; font-size:20px"><?= $pdt->getPrix() ?>€ TTC</b></li>
+	<li>Référence : <b>{{ produit.reference }}</b></li>
+	<li>Catégorie : <b>{{ produit.categorie }}</b></li>
+	<li>Couleur : <b>{{ produit.couleur }}</b></li>
+	<li>Taille : <b>{{ produit.taille }}</b></li>
+	<li>Public : <b>{{ produit.public }}</b></li>
+	<li>Prix : <b style="color: red; font-size:20px">{{ produit.prix }}€ TTC</b></li>
 </ul>
 <br/>
 <p>Description du produit : <br/>
-<em><?= $pdt->getDescription() ?></em></p>
+<em>{{ produit.description }}</em></p>
 
 <fieldset>
 	<legend>Acheter ce produit :</legend>
 
-	<?php if($pdt -> getStock() > 0) : ?>
+	{% if produit.stock > 0 %}
 	<form method="post" action="">
 		<label>Quantité :</label>
 		<select name="quantite">
-			<?php for($i=1; $i <= 5 && $i <= $pdt -> getStock(); $i++) : ?>
-			<option><?= $i ?></option>
-			<?php endfor; ?>
+			{% for i in 1..5 %}
+			<option>{{ i }}</option>
+			{% endfor %}
 		</select>
 		<input type="submit" value="Ajouter au panier" />
 	</form>
-	<?php else: ?>
+	{% else %}
 		<i style="color:red">Rupture de stock</i>
-	<?php endif; ?>
+
+	{% endif %}
 </fieldset>
